--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,23 +45,26 @@
 
     <Button
         android:id="@+id/balra_fordul"
-        android:layout_width="50dp"
+        android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginBottom="28dp"
-        android:layout_marginEnd="0dp"
-        android:background="@drawable/fordul_drawable"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/arrow"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/jobbra_fordul" />
+        app:layout_constraintEnd_toStartOf="@+id/jobbra_fordul"
+        android:rotation="90"/>
 
     <Button
         android:id="@+id/jobbra_fordul"
-        android:layout_width="50dp"
+        android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginBottom="28dp"
         android:layout_marginEnd="28dp"
-        android:background="@drawable/fordul_drawable"
+        android:background="@drawable/arrow"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:rotation="-90"
+        />
 
 
 
