--- a/app/src/main/res/drawable/fire_drawable.xml
+++ b/app/src/main/res/drawable/fire_drawable.xml
@@ -1,12 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:top="0dp" android:left="0dp" android:bottom="0dp" android:right="0dp">
+        <shape
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="oval" >
+            <solid
+                android:color="@color/fireColor" />
+            <size
+                android:width="80dp"
+                android:height="80dp" />
+        </shape>
+    </item>
 
-    <solid
-        android:color="#666666"/>
+    <item android:top="12dp" android:left="36dp" android:bottom="12dp" android:right="36dp">
+        <shape>
+            <stroke android:width="0dp" android:color="#ff207d94" />
+            <padding android:left="0dp"
+                android:top="0dp"
+                android:right="0dp"
+                android:bottom="0dp" />
+            <corners android:radius="0dp" />
+            <solid android:color="@color/kezelőszerv" />
+        </shape>
+    </item>
 
-    <size
-        android:width="50dp"
-        android:height="50dp"/>
-</shape>
+    <item android:top="36dp" android:left="12dp" android:bottom="36dp" android:right="12dp">
+        <shape>
+            <stroke android:width="0dp" android:color="#ff207d94" />
+            <padding android:left="0dp"
+                android:top="0dp"
+                android:right="0dp"
+                android:bottom="0dp" />
+            <corners android:radius="0dp" />
+            <solid android:color="@color/kezelőszerv" />
+        </shape>
+    </item>
+</layer-list>
