--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,40 +8,47 @@
     android:orientation="horizontal"
     >
 
-    <ImageView
+
+    <ViewFlipper
         android:id="@+id/urhajo"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_centerInParent="true"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/urhajo_drawable"
+        android:elevation="5dp"
+        android:flipInterval="100"
         android:rotation="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:background="@drawable/battleship0"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+        <ImageView
+            android:background="@drawable/battleship1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+    </ViewFlipper>
 
     <Button
         android:id="@+id/A_attack"
-        android:layout_width="84dp"
-        android:layout_height="81dp"
-        android:layout_marginBottom="6dp"
-        android:layout_marginStart="8dp"
-        android:background="@drawable/fire_drawable"
-        app:layout_constraintBottom_toTopOf="@+id/B_attack"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/B_attack"
-        android:layout_width="50dp"
-        android:layout_height="39dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="40dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="20dp"
         android:background="@drawable/fire_drawable"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 
     <Button
         android:id="@+id/balra_fordul"
@@ -63,8 +70,7 @@
         android:background="@drawable/arrow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:rotation="-90"
-        />
+        android:rotation="-90"/>
 
 
 
