--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="arrowColor">#ffffff</color>
-    <color name="arrowStroke">#111111</color>
+    <color name="fireColor">#222222</color>
+    <color name="kezelőszerv">#e4e4e8</color>
+
 </resources>
