--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -13,10 +13,10 @@
         android:layout_height="60dp"
         android:layout_marginBottom="28dp"
         android:layout_marginEnd="10dp"
-
+        android:background="@drawable/arrow"
+        android:rotation="90"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/jobbra_fordul"
-        android:rotation="90"/>
+        app:layout_constraintEnd_toStartOf="@+id/jobbra_fordul" />
 
     <Button
         android:id="@+id/jobbra_fordul"
@@ -24,7 +24,7 @@
         android:layout_height="60dp"
         android:layout_marginBottom="28dp"
         android:layout_marginEnd="28dp"
-
+        android:background="@drawable/arrow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:rotation="-90"/>
